# advent-of-code

./: .flake8  .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/advent_of_code/: runner_template.py
src/advent_of_code/2022/: __init__.py  day_N_template.py
src/advent_of_code/2022/day_01/: day_01.py
src/advent_of_code/2022/day_02/: day_02.py
src/advent_of_code/2022/day_03/: day_03.py
src/advent_of_code/2022/day_04/: day_04.py
src/advent_of_code/2022/day_05/: day_05.py  input.txt
src/advent_of_code/2022/day_06/: day_06.py
src/advent_of_code/2022/day_07/: day_07.py  input.txt
src/advent_of_code/2022/day_08/: day_08.py
src/advent_of_code/2022/day_09/: day_09.py
src/advent_of_code/2022/day_10/: day_10.py
src/advent_of_code/2022/day_11/: day_11.py  input.txt
src/advent_of_code/2022/day_12/: day_12.py
src/advent_of_code/2023/day_01/: day_01.py
src/advent_of_code/2023/day_02/: day_02.py  runner.py
src/advent_of_code/2023/day_03/: day_03.py  runner.py
src/advent_of_code/2023/day_04/: day_04.py  runner.py
src/advent_of_code/2023/day_05/: day_05.py  runner.py
src/advent_of_code/2023/day_XX/: runner.py
tests/2022/day_07/: test_day_07.py
tests/2022/day_08/: test_day_08.py
tests/2022/day_09/: test_day_09.py
tests/2022/day_10/: test_day_10.py
tests/2022/day_11/: test_day_11.py
tests/2022/day_12/: test_day_12.py
tests/2023/day_02/: test_day_02.py
tests/2023/day_03/: test_day_03.py
tests/2023/day_04/: test_day_04.py
tests/2023/day_05/: test_day_05.py
tests/day_08/: test_day_08.py
