[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code solutions."
authors = ["Ed Freeman <Ed.Freeman@endjin.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
